package project.business.models;

public enum State {
    WAITING_FOR_VALIDATION,
    IN_PREPARATION,
    ON_DELIVERY,
    DELIVERED,
    CANCELLED
}
